css/style.css
/* ... */
.frmName{
    grid-area: fName;
    width: 100%;
}

.frmEmail{
    grid-area: fEmail;
    width: 100%;
}

.skillListSect{
    /*
    text-align: left;
    display: grid;
    grid-template-columns: 1fr 1fr;

    justify-content: center;
    align-content: center;
    */

    margin: 0 auto;
    
    text-align: center;

    width: 100%;
    display: grid;
    grid-gap: 10px;
    grid-template-areas:
        'skillLang skillHL skillSoftware';

    border: 1px black solid;
    box-shadow: 5px 8px 5px #888888;
    background-color: white;
    padding: 25px 0px;
}

.skillListSect h3{
    padding-bottom: 18px;
}

.skillListSect ul{
    padding-left: 0;
    list-style: none;
}

.skillListSect ul li{
    padding: 5px 0 5px 0;
}

.skillLangList{
    grid-area: skillLang;
    width: 100%;
}

.skillHLList{
    grid-area: skillHL;
    width: 100%;
}

.skillSoftwareList{
    grid-area: skillSoftware;
    width: 100%;
}



/********* END OF SKILL SECT **********/
/*
.prog1815-Ass3, .webRocketProject{
    padding: 18px 0 18px 0;
}
*/


/********* Work SECT **************/


.workSect{
    min-height: 100%;
    background: linear-gradient(45deg, rgba(42, 69, 75, .6), rgb(14, 28, 38)), url("../images/white_wall_hash.webp");
    background-size: cover;
    box-shadow: inset 0 0 0 2000px rgba(14, 28, 38, 0.3);

    color: white;
}

.workSect h2{
    border-bottom: 1px white solid;
}


.videoWrapper{
    position: relative;
    padding: 0px 0px 56.25% 0px;
}


iframe{
    position: absolute;
    top: 0;
    left: 0;
}

/***** LegalLab Section **********/

.legalLab a img{
    width: 100%;
}

/******** LegalLab Section **********/

/******* END OF WORK SECT *********/


/***** Project Section  *******/

.projectItem{
    text-align: center;
    margin: 40px 0px;

    border: 1px black solid;
    box-shadow: 5px 8px 5px #888888;
    background-color: white;
    padding: 25px 25px;
}

.projectItem h3{
    padding-bottom: 25px;
}

.projectItem img{
    width: 100%;
}

.projectItem iframe{
    width: 100%;
    height: 100%;
}

.projectItemDetails h3{
    padding: 25px 0 25px 0;
    font-weight: bold;
}

.projectItemDetails p{
    padding: 0;
}

.projectItemDetails li{
    padding: 4px;
    list-style: none;
}

.projectItemDetails ul{
    padding-bottom: 20px;
}

.demoButton{
    
    text-decoration: none;

    /*
    color: white; 
    transition-duration: 0.4s;
	display: inline-block; 
	width: 250px; 
	font-size: 20px; 
    font-weight: bold;
	border: 5px solid white; 
	text-decoration: none;
	padding: 20px 70px; 

    text-align: center;
*/

    font-size: 35px;
    transition-duration: 0.4s;
    background-color: #008CBA;
    color: white;
    cursor: pointer;
    /*border: 2px solid black;*/
    border-radius: 16px;
    padding: 10px 30px;
}

.demoButton:hover{
    /*
    background-color: white;
    color: black;
    */

    background-color: white; 
    color: black; 
    border: 2px solid #008CBA;
}



/***** END Project Section **********/

/************** CONTACT SECTION ************/

.contactSect{
    min-height: 100%;
    background: linear-gradient(45deg, rgba(42, 69, 75, .6), rgb(14, 28, 38)), url("../images/white_wall_hash.webp");

    /*
    background-color: black;
    background-image: linear-gradient(rgb(14, 14, 14), rgb(59, 59, 59));
    */
    background-size: cover;
    box-shadow: inset 0 0 0 2000px rgba(14, 28, 38, 0.3);

    color: white;
}

/***** RocketProject Section **********/

#countDownText{
    font-size: 35px;
    /* color: black; */
    color:white;
    white-space: pre-line;      /*Needed for js to add line breaks*/
    font-weight: bold;
    padding: 50px 0;
}

#rocketPiece{
    width:  50px;
    height: 50px;
    position: absolute;
}

.rocketSect{
    height: 400px;
    width: 400px;
    position: relative;
    text-align: center;
    margin: 0 auto;
    margin-top: 15px;
    margin-bottom: 15px;
    background-color: rgb(34, 34, 34);
    border-radius: 100px;
}

.buttonSect{
    text-align: center;
    margin-bottom: 0;
    padding-top: 0;

}

.rocketButton{
    font-size: 35px;
    transition-duration: 0.4s;
    background-color: #008CBA;
    color: white;
    cursor: pointer;
    border-radius: 16px;
    padding: 10px;
}

.rocketButton:hover{
    background-color: white; 
    color: black; 
    border: 2px solid #008CBA;
}

/***** END RocketProject Section **********/


/*****   Contact Form    **********/

.formGridMain{
    text-align: justify;
    width: 80%;
    margin: 0 auto;
    display: none;
}

.formContainer{
    width: 100%;
    display: grid;
    grid-gap: 20px;
    grid-template-areas:
        'fName fEmail'
        'fMessage fMessage'
        'fButtons fButtons';

    margin: 0 auto;
}

.formContainer > div{
    /*background-color: rgba(255, 255, 255, 0.8);*/
    background-color: none;
    text-align: center;
    padding: 0;
    font-size: 30px;
  }

.frmName{
    grid-area: fName;
    width: 100%;
}

.frmEmail{
    grid-area: fEmail;
    width: 100%;
}

.frmName input, .frmEmail input, .frmMessage textarea{
    width: 100%;
    font-size: large;
}

.frmName input[type=text], .frmEmail input[type=email], .frmMessage textarea{
    padding: 14px 20px;
}

.frmMessage{
    grid-area: fMessage;
    width: 100%;
}

#umessage{
    resize: none;
}

.fieldSubmit{
    grid-area: fButtons;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 20px;
    margin: 0 auto;
    width: 400px;
    
}

.fieldSubmit input{
    font-size: large;
    padding: 16px;
    cursor: pointer;
    border-radius: 8px;
    
}

.frmSubButton{
    background-color: rgb(34, 34, 34);
    color: white;
    transition: background-color 0.6s ease;
}

.frmSubButton:hover{
    background-color: rgb(53, 53, 53);
    color: white;
}

.frmClearButton{
    background-color: whitesmoke;
    transition: background-color 0.6s ease;
}

.frmClearButton:hover{
    background-color: rgb(209, 209, 209);
}
/* ... */

